[build-system]
requires = ["scikit-build-core", "pybind11==2.9.2", "pkgconfig", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "ldsctrlest"
version = "0.9.0"
description = "Python bindings for ldsCtrlEst"
authors = [{ name = "Kyle Johnsen" }, { name = "Michael Bolus" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.6"
dependencies = ["numpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.scikit-build]
cmake.args = ["-DCMAKE_CXX_STANDARD=17"]
cmake.define = { CMAKE_CXX_STANDARD = "17" }
