[build-system]
requires = ["scikit-build-core", "pybind11>=2.12.0", "pkgconfig", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "ldsctrlest"
version = "0.9.0"
description = "Python bindings for ldsCtrlEst"
authors = [{ name = "Kyle Johnsen" }, { name = "Michael Bolus" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.6"
dependencies = ["numpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.scikit-build]
cmake.args = ["-DCMAKE_CXX_STANDARD=17"]
cmake.define = { CMAKE_CXX_STANDARD = "17" }

[tool.cibuildwheel]
skip = "pp* *-musllinux_*"
test-command = "pytest -v {project}/python/tests"
test-requires = ["pytest", "matplotlib"]

# == Linux ==
[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux2014"
before-build = "yum install -y openblas-devel lapack-devel"
before-all = """
echo "=== Setting up manylinux2014 build environment ==="
if [ -f /opt/rh/devtoolset-10/enable ]; then
  source /opt/rh/devtoolset-10/enable
fi
echo "GCC version: $(gcc --version)"
"""
environment = { CMAKE_PREFIX_PATH="/project/vcpkg_installed/x64-linux", LDSCTRLEST_BUILD_PYTHON="ON", CIBW_LINUX="1", Python3_EXECUTABLE="{python}", Python3_INCLUDE_DIR="{python_include}", Python3_LIBRARY="{python_library}", VERBOSE="1", CC="gcc", CXX="g++"}
repair-wheel-command = """
echo "=== Repairing wheel with auditwheel ==="
auditwheel show {wheel}
auditwheel repair -w {dest_dir} {wheel} --exclude libgfortran.so.5 --exclude libquadmath.so.0 || auditwheel repair -w {dest_dir} {wheel}
"""

# == macOS ==
[tool.cibuildwheel.macos]
# Use environment variable expansion for the path
environment = { CMAKE_TOOLCHAIN_FILE="$GITHUB_WORKSPACE/vcpkg/scripts/buildsystems/vcpkg.cmake", CMAKE_PREFIX_PATH="$GITHUB_WORKSPACE/vcpkg_installed/arm64-osx", LDSCTRLEST_BUILD_PYTHON="ON" }